# dataProcess

./: CMakeLists.txt
euroc/: parseEurocBag.cpp  processEurocTruth.cpp
ntu_viral/: parseNTUBag.cpp
shell/: parse_euroc_bag.sh  parse_ntu_bag.sh  parse_tum_bag.sh  process_euroc_truth.sh  process_tum_truth.sh
tum/: parseTUMBag.cpp  rectImgs.cpp
